fix parallax on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -301,16 +301,9 @@ h6 {
 
 /* parallax */
 
-.parallax {
-  min-height: 600px;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
-
-}
 
 .parallax {
-  min-height: 300px;
+  height: 300px;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
